# av-infra-bp

./: .gitignore  README.md  pyproject.toml
bp/: README.md  pyproject.toml
bp/src/bp/: __init__.py  players.py  world.py
experiments/: avinfra.ipynb  basic_formulation.ipynb  decomposed_lp.py  final_av_infra.py  formulations.ipynb  level_0.ipynb  level_1.ipynb  level_1_accident.ipynb  level_1_nominal.ipynb  level_2_fail.ipynb  level_casti.ipynb  level_casti_anon.ipynb  level_symmetric_dictator.ipynb  lex_order.py  lp_decomposed.ipynb  lp_test.ipynb  vanilla_mask_lp.py
mcr/src/mcr/avinfra_persuasion/: opt.py  toy_preference_evaluation_mosp.py
mcr/src/mcr/avinfra_persuasion/experiments/: experiment_0.py  experiment_2_1.py  experiment_3_0.py  experiment_4_0.py  plotting.py
mcr/src/mcr/avinfra_persuasion/experiments/games/: base.py
mcr/tests/avinfra_persuasion/: test_experiment_3_0.py
orcd_scripts/: engaging_base.sh  engaging_shortest_path.sh
tests/: test_final_av_infra.py
