[project]
name = "BP4SI"
version = "0.1.0"
description = "Bayesian Persuasion approaches for real-world Smart Infrastructure"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bp",
]

[tool.uv]
# The repo root only orchestrates the workspace; it is not an installable
# package itself. The actual library lives in the `bp` member.
package = false

[tool.uv.sources]
bp = { workspace = true }

[tool.uv.workspace]
members = [
    "bp",
]
