[project]
name = "bp"
version = "0.1.0"
description = "Bayesian Persuasion approaches for real-world Smart Infrastructure"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cython>=3.2.4",
    "gurobipy>=13.0.1",
    "jupyterlab>=4.5.6",
    "networkx>=3.6.1",
    "numpy>=2.4.3",
    "pydantic>=2.13.0",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "taichi>=1.7.4",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.ruff.lint]
# V, A, L, I are deliberate set-theoretic notation from the optimization
# formulation (vertices, arcs, turns, instrumented arcs), not typos.
ignore = ["E741", "E743"]
